link color fix and dark mode switch colors

--- a/src/styles/dark_mode.css
+++ b/src/styles/dark_mode.css
@@ -2,25 +2,38 @@
 /*      Dark Mode      */
 /*                     */
 
-.dark_mode {
-    /* margin-top: -20px;
-    margin-left: 10px; */
-}
-
 .dark_mode_label {
     width: 65px;
     height: 30px;
     position: relative;
     top: 5px;
     display: block;
-    background: #ebebeb;
+    background: var(--white_background);
     border: thin solid var(--white_text);
     border-radius: 200px;
     box-shadow: inset 0px 5px 15px rgba(0, 0, 0, 0.4),
         inset 0px -5px 15px rgba(255, 255, 255, 0.4);
     cursor: pointer;
     transition: 0.3s;
+
+    i {
+        position: absolute;
+        width: 20px;
+        top: 8.5px;
+        z-index: 100;
+    }
+    #sun {
+        left: 7.5px;
+        color: var(--midnight_blue_text);
+        transition: all 0.15s ease;
+    }
+    #moon {
+        left: 44px;
+        color: var(--midnight_blue_text);
+        transition: all 0.15s ease;
+    }
 }
+
 .dark_mode_label:after {
     content: "";
     width: 25px;
@@ -33,46 +46,19 @@
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
+
+.dark_mode_label:active:after {
+    width: 30px;
+}
+
 .dark_mode_input {
     width: 0;
     height: 0;
     visibility: hidden;
 }
-.dark_mode_input:checked + .dark_mode_label {
-    background: #242424;
-}
+
 .dark_mode_input:checked + .dark_mode_label:after {
     left: 62px;
     transform: translateX(-100%);
     background: linear-gradient(180deg, #777, #3a3a3a);
-}
-.dark_mode_label:active:after {
-    width: 30px;
-}
-
-.dark_mode_label i {
-    position: absolute;
-    width: 20px;
-    top: 8.5px;
-    z-index: 100;
-}
-
-.dark_mode_label #sun {
-    left: 7.5px;
-    color: #fff;
-    transition: all 0.15s ease;
-}
-
-.dark_mode_label #moon {
-    left: 44px;
-    color: #7e7e7e;
-    transition: all 0.15s ease;
-}
-
-.dark_mode_input:checked + .dark_mode_label #sun {
-    color: #7e7e7e;
-}
-
-.dark_mode_input:checked + .dark_mode_label #moon {
-    color: #fff;
 }
